[LAB-01][WIP] - Binary relations
 - fixed acyclic predicate
 - added violation finders